# Data_Structures

./: .gitignore  CMakeLists.txt  README.md  binary_tree.c  doubly_linked_list.c  fibonacci_arr.c  fibonacci_loop.c  fibonacci_tree.c  hash_table.c  heap  heap.c  linked_list.c  queue.c  singly_linked_list.c  tasks.py
include/: b_tree.h  binary_tree.h  double_linked_list.h  fibonacci_arr.h  fibonacci_loop.h  fibonacci_rec.h  fibonacci_tree.h  hash_table.h  heap.h  queue.h  single_linked_list.h  stack.h
src/: CMakeLists.txt  b_tree.c  binary_tree.c  double_linked_list.c  doubly_linked_list.c  fibonacci_arr.c  fibonacci_loop.c  fibonacci_rec.c  fibonacci_tree.c  hash_table.c  heap.c  queue.c  single_linked_list.c  stack.c
tests/: CMakeLists.txt  b_tree_test.c  binary_tree_test.c  double_linked_list_test.c  fibonacci_arr_test.c  fibonacci_loop_test.c  fibonacci_rec_test.c  fibonacci_tree_test.c  hash_table_test.c  heap_test.c  queue_test.c  single_linked_list_test.c  stack_test.c
